# InvoICE

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md
admin/: package.json  pnpm-lock.yaml
admin/src/app/: globals.css  layout.tsx  page.tsx
admin/src/hooks/: use-admin-auth.ts
admin/src/lib/: supabase.ts  types.ts
desktop/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/commands/: mod.rs
desktop/src/hooks/: useRecurringCheck.ts  useReminderCheck.ts  useSync.ts
desktop/src/i18n/: config.ts  index.ts
desktop/src/lib/: backupService.ts  clientService.ts  constants.ts  currencyService.ts  dashboardService.ts  database.ts  exportService.ts  importService.ts  invoiceCalc.ts  invoiceService.ts  licenseService.ts  recurringService.ts  reminderService.ts  supabase.ts  syncService.ts  userId.ts
desktop/src/pages/: auth.tsx  clients.tsx  dashboard.tsx  invoice-editor.tsx  invoices.tsx  recurring.tsx  settings.tsx
desktop/src/stores/: authStore.ts  clientStore.ts  invoiceStore.ts  settingsStore.ts
desktop/src/templates/: index.ts  kreatif.tsx  (+3 more)
landing/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
supabase/: README.md  fix_admin.sql  verify.sql
supabase/migrations/: 001_initial_schema.sql  002_disable_rls_dev.sql  003_admin_schema.sql  004_disable_admin_rls.sql
(+54 files in other folders)
